--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,11 @@
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0"
+  },
+  "devDependencies": {
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
