Finalização da atenticação
Nesta versão, concluímos a implementação da autenticação por token, permitindo que os usuários se autentiquem e acessem o sistema com segurança. Também definimos regras de acesso específicas para perfis de admin e aluno, garantindo permissões adequadas. Além disso, introduzimos um sistema de logs para registrar eventos importantes e iniciamos os testes das funções no banco de dados, visando garantir o correto funcionamento das consultas e operações. Essas melhorias aprimoram a segurança e a qualidade do sistema, proporcionando uma experiência mais confiável para os usuários.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.9.0"
   }
 }
