--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.3",
     "winston": "^3.9.0"
   }
 }
