--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     networks:
       - network
     # descomente se quiser acessar o banco de dados externamente
-    #ports:
-    #  - 5432:5432
+    ports:
+      - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
   backend:
     build:
-      context: ./backend
+      context: ./Backend
       dockerfile: Dockerfile
     env_file:
       - .env
@@ -31,7 +31,7 @@ services:
 
   nginx:
     build:
-      context: ./frontend
+      context: ./Frontend
       dockerfile: Dockerfile
     env_file:
       - .env
