--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
-
-
     depends_on:
         - postgres
     ports:
@@ -28,7 +26,7 @@ services:
       - network
     volumes:
       - backend-data:/app/
-
+      - ssl-certs:/etc/letsencrypt/live/
   nginx:
     build:
       context: ./Frontend
@@ -49,5 +47,6 @@ networks:
   network:
 
 volumes:
+  ssl-certs:
   backend-data:
   postgres-data:
