--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # info API para o front
 API_PROTOCOL="http"
-API_URL="192.168.100.136"
+API_URL="host_ip"
 API_PORT=3000
 
 # Configurações do banco de dados
