--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,13 +14,18 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "nodemon": "^1.14.9",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
-    "sequelize-cli": "^5.3.0"
+    "sequelize-cli": "^5.3.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
+    "nodemon": "^1.14.9",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
