--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     networks:
       - network
     # descomente se quiser acessar o banco de dados externamente
-    # ports:
-    #  - 5432:5432
+    ports:
+      - 5432:5432
     restart: always
     volumes:
       - postgres-data:/var/lib/postgresql/data
